Save more progress

--- a/index-2.html
+++ b/index-2.html
@@ -24,7 +24,7 @@
 			<div class="menu-mobile">
 				<div class="menu-button icon-menu-2 show-phone"></div>
 				<ul class="menu-links">
-					<li><a href="javascript:void(0)" onClick="goToByScroll('screencasts')">ScreenCasts</a></li>
+					<li><a href="javascript:void(0)" onClick="goToByScroll('courses')">Courses</a></li>
 					<li><a href="javascript:void(0)" onClick="goToByScroll('pricing')">Pricing</a></li>
 					<li><a href="javascript:void(0)" onClick="goToByScroll('team')">Team</a></li>
 				</ul>
@@ -51,19 +51,19 @@
 <div class="icon-boxes-bg">
 	<div class="row">
 		<div class="grid_4 icon-box">
-			<a href="#"><span style="color: #f76a4c;" class="icon-eye"></span></a>
-			<h4><a href="#">Color scheme</a></h4>
-			<p>Minimalistic design that features bright colors, lots of open space and clean overall look which increases usability - so easy to change color scheme!</p>
+			<a href="#"><span style="color: #f76a4c;" class="icon-rocket"></span></a>
+			<h4><a href="#">Accelerated Learning</a></h4>
+			<p>My training courses will teach you to love and enjoy programming.  You will gain a mastery that will give you confidence to strike your own path and tackle the hard problems!</p>
 		</div>
 		<div class="grid_4 icon-box">
-			<a href="#"><span style="color: #979fb2;" class="icon-settings"></span></a>
-			<h4><a href="#">Unlimited customization</a></h4>
-			<p>Main features: responsive slider, add/remove/duplicate modules, 450 webfont icons, price tables, newsletter & many more!</p>
+			<a href="#"><span style="color: #979fb2;" class="icon-laptop"></span></a>
+			<h4><a href="#">Program Anywhere</a></h4>
+			<p>The development workflows I'm pioneering will ensure you can program whenever and wherever on nearly any device.</p>
 		</div>
 		<div class="grid_4 icon-box">
-			<a href="#"><span style="color: #6394d7;" class="icon-happy"></span></a>
-			<h4><a href="#">Happy customers</a></h4>
-			<p>FLAT and of course other our themes, have received a lot of kind opinions from our visitors and customers. Join now to our happy buyers!</p>
+			<a href="#"><span style="color: #6394d7;" class="icon-html5"></span></a>
+			<h4><a href="#">HTML5 Games</a></h4>
+			<p>While much of the learning is serious, I'll also teach you a variety of methods to make HTML5 games!</p>
 		</div>
 	</div>
 </div>
@@ -73,16 +73,16 @@
 <div class="text-button-bg">
 	<div class="row">
 		<div class="grid_9 text-button">
-			<p>Flat is a clean, responsive, multipurpose landing page with many custom elements.</p>
+			<p>Creationix School of Innovation is just getting started.</p>
 		</div><div class="grid_3 text-button">
-			<a class="btn-text" href="">Purchase Template</a>
+			<a class="btn-text" href="">Join Now</a>
 		</div>
 	</div>
 </div>
 <!-- /TEXT + BUTTON -->
 
 <!-- PRODUCT BOX #1 -->
-<div class="product-box-bg" id="screencasts">
+<div class="product-box-bg" id="courses">
 	<div class="row">
 		<div class="grid_6 product-box product-box-text">
 			<h3>Showcase your products and/or services here</h3>
@@ -98,7 +98,7 @@
 <div class="product-box-bg">
 	<div class="row">
 		<div class="grid_6 product-box">
-			<iframe src="http://player.vimeo.com/video/43457382?title=1&amp;byline=0&amp;portrait=0&amp;color=2b9884" width="560" height="320" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<iframe src="http://player.vimeo.com/video/97465914?title=1&amp;byline=0&amp;portrait=0&amp;color=2b9884" width="560" height="320" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		</div><div class="grid_6 product-box product-box-text">
 			<h3>You can put an embed video here, yay!</h3>
 			<p>Morbi eget ipsum at nisi mattis facilisis a vitae augue. Nunc in dolor ipsum, eu sagittis sem. Vivamus luctus rutrum interdum. Curabitur nec nisi sem. Pellentesque eget ante nibh. In hac habitasse platea dictumst. Cras ante libero, ullamcorper et feugiat ac, venenatis vitae neque. Vestibulum condimentum dignissim ante eget gravida.</p>
