--- a/index-2.html
+++ b/index-2.html
@@ -85,8 +85,18 @@
 <div class="product-box-bg" id="courses">
 	<div class="row">
 		<div class="grid_6 product-box product-box-text">
-			<h3>Showcase your products and/or services here</h3>
-			<p>Morbi eget ipsum at nisi mattis facilisis a vitae augue. Nunc in dolor ipsum, eu sagittis sem. Vivamus luctus rutrum interdum. Curabitur nec nisi sem. Pellentesque eget ante nibh. In hac habitasse platea dictumst. Cras ante libero, ullamcorper et feugiat ac, venenatis vitae neque. Vestibulum condimentum dignissim ante eget gravida.</p>
+			<h3>Create Your Own Programming Language</h3>
+			<p>This course will walk you through the steps to design and program your very own programming language.</p>
+			<p>This is under active development.  The rough outline is:</p>
+		  <ul>
+		  	<li>Lexing and Parsing a Lisp Style Syntax</li>
+		  	<li>Writing a Simple Interpreter</li>
+		  	<li>Adding Infix Operators and C-Style Syntax</li>
+		  	<li>Implementing Coroutines</li>
+		  	<li>Optimizing Three Address Code</li>
+		  	<li>Transpiling to JavaScript</li>
+		  	<li>Self Hosting the Compiler</li>
+		  </ul>
 		</div><div class="grid_6 product-box">
 			<img src="images/product.png" title="">
 		</div>
@@ -131,7 +141,7 @@
 			<div class="table grid_4">
 				<h4 class="table-1">beginner</h4>
 				<div class="price"><sup>$</sup>9</div>
-				<div class="option">per year</div>
+				<div class="option">per month</div>
 				<p>Description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
 				<ul class="table-1">
 					<li>1GB Disk Space</li>
@@ -144,7 +154,7 @@
 			<div class="table grid_4">
 				<h4 class="table-3">ultimate</h4>
 				<div class="price"><sup>$</sup>29</div>
-				<div class="option">per year</div>
+				<div class="option">per month</div>
 				<p>Description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
 				<ul class="table-3">
 					<li>5GB Disk Space</li>
@@ -159,7 +169,7 @@
 			<div class="table grid_4">
 				<h4 class="table-2">advanced</h4>
 				<div class="price"><sup>$</sup>19</div>
-				<div class="option">per year</div>
+				<div class="option">per month</div>
 				<p>Description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
 				<ul class="table-2">
 					<li>3GB Disk Space</li>
@@ -190,101 +200,14 @@
 </div>
 <!-- /SUBSCRIBE BOX -->
 
-
-<!-- TEAM -->
-<div id="team" class="team-bg">
-	<h3>The A-Team</h3>
-	<div class="row team">
-		<div class="grid_8 offset_2">
-			<p>Morbi eget ipsum at nisi mattis facilisis a vitae augue. Nunc in dolor ipsum, eu sagittis sem. Vivamus luctus rutrum interdum. Curabitur nec nisi sem. Pellentesque eget ante nibh. In hac habitasse platea dictumst. Aliquam sed nunc ante. Donec eu elementum massa.</p>
-		</div>
-	</div>
-	<div class="row team">
-		<!-- MEMBER -->
-		<div class="grid_3 member">
-			<div class="person-img" style="background-image: url('images/team-1.jpg');"></div>
-			<h5>Sandra Bartlett</h5>
-			<p>CEO / Co-Founder</p>
-			<div class="team-social">
-				<a href="" class="icon-mail-2"></a>
-				<a href="" class="icon-twitter"></a>
-			</div>
-		</div><!--
-		--><div class="grid_3 member">
-			<div class="person-img" style="background-image: url('images/team-2.jpg');"></div>
-			<h5>Carl Rich</h5>
-			<p>Skills trainer</p>
-			<div class="team-social">
-				<a href="" class="icon-facebook"></a>
-				<a href="" class="icon-skype"></a>
-			</div>
-		</div><!--
-		--><div class="grid_3 member">
-			<div class="person-img" style="background-image: url('images/team-3.jpg');"></div>
-			<h5>Jeffery Dufresne</h5>
-			<p>Environmental technician</p>
-			<div class="team-social">
-				<a href="" class="icon-dribbble"></a>
-				<a href="" class="icon-youtube-2"></a>
-			</div>
-		</div><!--
-		--><div class="grid_3 member">
-			<div class="person-img" style="background-image: url('images/team-4.jpg');"></div>
-			<h5>Edward Anderson</h5>
-			<p>Systems architect</p>
-			<div class="team-social">
-				<a href="" class="icon-instagram"></a>
-				<a href="" class="icon-pinterest-2"></a>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- /TEAM -->
-
-<!-- TESTIMONIALS -->
-<div class="testimonials-bg" id="testimonials">
-	<h3>What our customers say</h3>
-	<div class="row testimonials">
-		<div class="grid_4 testimonial">
-			<span class="bubble"><span>My web page looks really nice. Thanks for everything you do!!!</span></span>
-			<p>John Doe</p>
-		</div><!--
-		--><div class="grid_4 testimonial">
-			<span class="bubble"><span>You are good... WOW! This is fabulous, and I really appreciate it!</span></span>
-			<p>Kate Doe</p>
-		</div><!--
-		--><div class="grid_4 testimonial">
-			<span class="bubble"><span>Thanks for the quick turn arounds, I really appreciate it.</span></span>
-			<p>John & Kate D.</p>
-		</div>
-	</div>
-</div>
-<!-- /TESTIMONIALS -->
-
-<!-- CLIENTS -->
-<div class="clients-bg">
-	<h3>We've worked with</h3>
-	<div class="row clients">
-		<ul>
-			<li class="grid_2"><a href="#"><img src="images/client-1.png"></a></li><!--
-			--><li class="grid_2"><a href="#"><img src="images/client-2.png"></a></li><!--
-			--><li class="grid_2"><a href="#"><img src="images/client-3.png"></a></li><!--
-			--><li class="grid_2"><a href="#"><img src="images/client-4.png"></a></li><!--
-			--><li class="grid_2"><a href="#"><img src="images/client-5.png"></a></li><!--
-			--><li class="grid_2"><a href="#"><img src="images/client-6.png"></a></li>
-		</ul>
-	</div>
-</div>
-<!-- /CLIENTS -->
-
 <!-- FOOTER -->
 <div class="footer-bg">
 	<div class="row footer">
 		<div class="grid_3 footer-col">
-			<h4>Contact Us</h4>
-			<p>2150 Virginia Street<br>Westchester, IL 60154</p>
-			<p>773-587-6936</p>
-			<p><a href="mailto:name@company.com">name@company.com</a></p>
+			<h4>Contact Me</h4>
+			<p>306 Lewis Akin Road<br>Red Lick, TX 75503</p>
+			<p>214-250-6642</p>
+			<p><a href="mailto:tim@creationix.com">tim@creationix.com</a></p>
 		</div>
 		<div class="grid_4 footer-col">
 			<h4>You need to check it</h4>
@@ -309,7 +232,6 @@
 	<div class="row copyrights">
 		<div class="grid_6 copyrights-col">
 			<p>All rights reserved &copy; 2014</p>
-			<p><a href="http://themeforest.net/user/PassionThemes?ref=passionthemes">Flat</a> template by <a href="http://themeforest.net/user/PassionThemes?ref=passionthemes">Passion Themes</a></p>
 		</div>
 		<div class="grid_6 copyrights-col">
 			<p class="copyright-icons">
