Fill out price tables

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 				<ul class="menu-links">
 					<li><a href="javascript:void(0)" onClick="goToByScroll('courses')">Courses</a></li>
 					<li><a href="javascript:void(0)" onClick="goToByScroll('pricing')">Pricing</a></li>
-					<li><a href="javascript:void(0)" onClick="goToByScroll('team')">Team</a></li>
 				</ul>
 			</div>
 			<div class="menu-right">
@@ -52,7 +51,7 @@
 	<div class="row">
 		<div class="grid_4 icon-box">
 			<a href="#"><span style="color: #f76a4c;" class="icon-rocket"></span></a>
-			<h4><a href="#">Accelerated Learning</a></h4>
+			<h4><a href="#">Rocket Learning</a></h4>
 			<p>My training courses will teach you to love and enjoy programming.  You will gain a mastery that will give you confidence to strike your own path and tackle the hard problems!</p>
 		</div>
 		<div class="grid_4 icon-box">
@@ -63,7 +62,8 @@
 		<div class="grid_4 icon-box">
 			<a href="#"><span style="color: #6394d7;" class="icon-html5"></span></a>
 			<h4><a href="#">HTML5 Games</a></h4>
-			<p>While much of the learning is serious, I'll also teach you a variety of methods to make HTML5 games!</p>
+			<p>While much of the learning is serious, I'll also teach you a variety of methods to make HTML5 games.</p>
+			<p>You will be a better programmer because you will love doing it!.
 		</div>
 	</div>
 </div>
@@ -135,70 +135,48 @@
 	<h3>Price tables</h3>
 	<div class="row price_table">
 		<div class="grid_8 offset_2">
-			<p>Morbi eget ipsum at nisi mattis facilisis a vitae augue. Nunc in dolor ipsum, eu sagittis sem. Vivamus luctus rutrum interdum. Curabitur nec nisi sem. Pellentesque eget ante nibh. In hac habitasse platea dictumst. Aliquam sed nunc ante. Donec eu elementum massa.</p>
+			<p>As a subscribing member of the school, you'll have full access to all content.  Also depending on the level of extra support you give me, I'll help you share your creations with the world.  This special hosting service can run tedit build rules on-the fly and makes for a super simple deployment system for publishing small sites.</p>
 		</div>
 		<div class="row">
 			<div class="table grid_4">
 				<h4 class="table-1">beginner</h4>
 				<div class="price"><sup>$</sup>9</div>
 				<div class="option">per month</div>
-				<p>Description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+				<p>As a beginner member you will get full access to all past, current, and future premium content.</p>
 				<ul class="table-1">
-					<li>1GB Disk Space</li>
-					<li>10GB Bandwidth</li>
-					<li>2 Email Accounts</li>
-					<li>Unlimited subdomains</li>
+					<li>Unlimited Access to Premium Content</li>
+					<li>Limited Email Support</li>
 				</ul>
-				<div class="action-button"><a href="">Buy now</a></div>
+				<div class="action-button"><a href="">Subscribe now</a></div>
 			</div>
 			<div class="table grid_4">
 				<h4 class="table-3">ultimate</h4>
 				<div class="price"><sup>$</sup>29</div>
 				<div class="option">per month</div>
-				<p>Description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+				<p>For being an ultimate member, I'll give your emails priority and host up to five sites for you using the tedit platform.</p>
 				<ul class="table-3">
-					<li>5GB Disk Space</li>
-					<li>50GB Bandwidth</li>
-					<li>10 Email Accounts</li>
-					<li>Unlimited subdomains</li>
-					<li>Unlimited MySQL DBs</li>
-					<li>24/7 Support</li>
+					<li>Unlimited Access to Premium Content</li>
+					<li>Five Hosted Tedit Platform Sites</li>
+					<li>Priority Email Support</li>
 				</ul>
-				<div class="action-button"><a href="">Buy now</a></div>
+				<div class="action-button"><a href="">Subscribe now</a></div>
 			</div>
 			<div class="table grid_4">
 				<h4 class="table-2">advanced</h4>
 				<div class="price"><sup>$</sup>19</div>
 				<div class="option">per month</div>
-				<p>Description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+				<p>As an advanced member, you'll also get all premium content and I'll throw in two hosted tedit sites.</p>
 				<ul class="table-2">
-					<li>3GB Disk Space</li>
-					<li>25GB Bandwidth</li>
-					<li>5 Email Accounts</li>
-					<li>Unlimited subdomains</li>
+					<li>Unlimited Access to Premium Content</li>
+					<li>Two Hosted Tedit Platform sites</li>
+					<li>Email Support</li>
 				</ul>
-				<div class="action-button"><a href="">Buy now</a></div>
+				<div class="action-button"><a href="">Subscribe now</a></div>
 			</div>
 		</div>
 	</div>
 </div>
 <!-- /PRICE TABLE -->
-
-<!-- SUBSCRIBE BOX -->
-<div class="subscribe-bg">
-	<h3>Join our newsletter</h3>
-	<div class="row team">
-		<div class="grid_8 offset_2">
-			<p>Morbi eget ipsum at nisi mattis facilisis a vitae augue. Nunc in dolor ipsum, eu sagittis sem. Vivamus luctus rutrum interdum. Curabitur nec nisi sem. Pellentesque eget ante nibh. In hac habitasse platea dictumst. Aliquam sed nunc ante. Donec eu elementum massa.</p>
-			<form action="" method="post" name="subscribeform">
-				<div class="form-subscribe">
-					<input type="email" required placeholder="Enter your e-mail here" name="email"><button class="submit" type="submit" name="subscribe">Subscribe</button>
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
-<!-- /SUBSCRIBE BOX -->
 
 <!-- FOOTER -->
 <div class="footer-bg">
@@ -231,7 +209,7 @@
 <div class="copyrights-bg">
 	<div class="row copyrights">
 		<div class="grid_6 copyrights-col">
-			<p>All rights reserved &copy; 2014</p>
+			<p>All rights reserved &copy; 2014 Tim Caswell</p>
 		</div>
 		<div class="grid_6 copyrights-col">
 			<p class="copyright-icons">
