Put note on subscribe buttons

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<div class="grid_9 text-button">
 			<p>Creationix School of Innovation is just getting started.</p>
 		</div><div class="grid_3 text-button">
-			<a class="btn-text" href="">Join Now</a>
+			<a class="btn-text" href="javascript:void(0)" onClick="goToByScroll('pricing')">Join Now</a>
 		</div>
 	</div>
 </div>
@@ -142,24 +142,23 @@
 				<h4 class="table-1">beginner</h4>
 				<div class="price"><sup>$</sup>9</div>
 				<div class="option">per month</div>
-				<p>As a beginner member you will get full access to all past, current, and future premium content.</p>
+				<p>As a beginner member you will get full access to all past, current, and future premium content.  The more people that sign up, the more time I'll have to make new content. Tell your friends!</p>
 				<ul class="table-1">
 					<li>Unlimited Access to Premium Content</li>
-					<li>Limited Email Support</li>
 				</ul>
-				<div class="action-button"><a href="">Subscribe now</a></div>
+				<div class="action-button"><a href="javascript:void(0)" onClick="alert('Sorry the site is almost live, come back tomorrow')">Subscribe now</a></div>
 			</div>
 			<div class="table grid_4">
 				<h4 class="table-3">ultimate</h4>
 				<div class="price"><sup>$</sup>29</div>
 				<div class="option">per month</div>
-				<p>For being an ultimate member, I'll give your emails priority and host up to five sites for you using the tedit platform.</p>
+				<p>As an ultimate member you are serious about learning.  You get all content and up to five live sites.</p>
 				<ul class="table-3">
 					<li>Unlimited Access to Premium Content</li>
 					<li>Five Hosted Tedit Platform Sites</li>
-					<li>Priority Email Support</li>
+					<li>Limited Email Support</li>
 				</ul>
-				<div class="action-button"><a href="">Subscribe now</a></div>
+				<div class="action-button"><a href="javascript:void(0)" onClick="alert('Sorry the site is almost live, come back tomorrow')">Subscribe now</a></div>
 			</div>
 			<div class="table grid_4">
 				<h4 class="table-2">advanced</h4>
@@ -169,9 +168,9 @@
 				<ul class="table-2">
 					<li>Unlimited Access to Premium Content</li>
 					<li>Two Hosted Tedit Platform sites</li>
-					<li>Email Support</li>
+					<li>Limited Email Support</li>
 				</ul>
-				<div class="action-button"><a href="">Subscribe now</a></div>
+				<div class="action-button"><a href="javascript:void(0)" onClick="alert('Sorry the site is almost live, come back tomorrow')">Subscribe now</a></div>
 			</div>
 		</div>
 	</div>
