Add tracking and about page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title></title>
+	<title>Creationix School of Innovation</title>
+	<meta charset="utf-8">
 	<link rel="shortcut icon" href="">
 	<meta name="description" content="">
 	<!--[if lt IE 9]>
@@ -197,8 +198,10 @@
 			</ul>
 		</div>
 		<div class="grid_5 footer-col">
-			<h4>Short bio</h4>
-			<p>Proin sodales libero at nulla scelerisque fringilla. Donec blandit luctus massa in blandit. Nunc fermentum facilisis orci eget rutrum. In nulla purus, ornare vitae tincidunt vitae, consectetur vel enim.<br><br>Suspendisse potenti. Integer suscipit nunc nec nunc porttitor vel mattis mauris blandit. Donec risus tortor, tristique nec egestas sit amet, iaculis non massa.</p>
+			<h4>About Creationix</h4>
+			<p>Hi, my real name is Tim Caswell.  I've been programming for almost 25 years.  I have a passion for creating new things and helping others ignite their own passion.</p>
+			<p>The word “creationix” is a contraction of “creation” and “ix” from linux and unix.  Creationix is all about making things using open source modular software.</p>
+			<p>This school is my way to share my experience with the world.  Thank you for your support, I will do my best to make programming a joy for you too.</p>
 		</div>
 	</div>
 </div>
@@ -229,6 +232,15 @@
 <script src="js/jquery.bxslider.js"></script>
 <!-- all JS scripts -->
 <script src="js/scripts.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-36925828-1', 'creationix.com');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
