--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 <div class="icon-boxes-bg">
 	<div class="row">
 		<div class="grid_4 icon-box">
-			<a href="#"><span style="color: #f76a4c;" class="icon-rocket"></span></a>
-			<h4><a href="#">Rocket Learning</a></h4>
+			<a href="#"><span style="color: #f76a4c;" class="icon-fire"></span></a>
+			<h4><a href="#">Ignite Your Passion</a></h4>
 			<p>My training courses will teach you to love and enjoy programming.  You will gain a mastery that will give you confidence to strike your own path and tackle the hard problems!</p>
 		</div>
 		<div class="grid_4 icon-box">
 			<a href="#"><span style="color: #979fb2;" class="icon-laptop"></span></a>
 			<h4><a href="#">Program Anywhere</a></h4>
-			<p>The development workflows I'm pioneering will ensure you can program whenever and wherever on nearly any device.</p>
+			<p>The development workflows I'm pioneering will ensure you can program whenever and wherever on nearly any device with minimal resistance.</p>
 		</div>
 		<div class="grid_4 icon-box">
 			<a href="#"><span style="color: #6394d7;" class="icon-html5"></span></a>
@@ -99,7 +99,7 @@
 		  	<li>Self Hosting the Compiler</li>
 		  </ul>
 		</div><div class="grid_6 product-box">
-			<img src="images/product.png" title="">
+			<img src="images/product-1.png" title="">
 		</div>
 	</div>
 </div>
@@ -111,8 +111,15 @@
 		<div class="grid_6 product-box">
 			<iframe src="http://player.vimeo.com/video/97465914?title=1&amp;byline=0&amp;portrait=0&amp;color=2b9884" width="560" height="320" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		</div><div class="grid_6 product-box product-box-text">
-			<h3>You can put an embed video here, yay!</h3>
-			<p>Morbi eget ipsum at nisi mattis facilisis a vitae augue. Nunc in dolor ipsum, eu sagittis sem. Vivamus luctus rutrum interdum. Curabitur nec nisi sem. Pellentesque eget ante nibh. In hac habitasse platea dictumst. Cras ante libero, ullamcorper et feugiat ac, venenatis vitae neque. Vestibulum condimentum dignissim ante eget gravida.</p>
+			<h3>Learn New Workflows</h3>
+			<p>I have developed some new workflows that reduce barrier to entry to people learning to program.  The programming environment will wok offline and on virtually any machine.  This will include Android tablets, iPads, ChromeBooks, and of course laptops and desktops running Windows, OSX or Linux.</p>
+			<p>Soon I'll make a version of the environment that even runs well on smart-phones for truly portable programming.</p>
+			<ul>
+				<li>Runs on any device capable of browsing the web</li>
+				<li>Git implemented in JavaScript for offline and local development</li>
+				<li>Build system for dynamic files</li>
+				<li>Sane submodules for clean dependency management</li>
+			</ul>
 		</div>
 	</div>
 </div>
@@ -122,10 +129,17 @@
 <div class="product-box-bg">
 	<div class="row">
 		<div class="grid_6 product-box product-box-text">
-			<h3>So easy to customize!</h3>
-			<p>Morbi eget ipsum at nisi mattis facilisis a vitae augue. Nunc in dolor ipsum, eu sagittis sem. Vivamus luctus rutrum interdum. Curabitur nec nisi sem. Pellentesque eget ante nibh. In hac habitasse platea dictumst. Cras ante libero, ullamcorper et feugiat ac, venenatis vitae neque. Vestibulum condimentum dignissim ante eget gravida.</p>
+			<h3>JavaScript Fundamentals Deep-Dive</h3>
+			<p>There are more courses in early development.  One of the next courses is a deep-dive into JavaScript fundamentals.  While JavaScript is one of the most popular programming languages in the world thanks to it being the language of the web, there is a severe shortage in the workplace of people who really understand it.  This course might include:</p>
+			<ul>
+				<li>How Objects and Closures are the Same Thing</li>
+				<li>How <code>new</code> and <code>this</code> Really Work</li>
+				<li>Understanding the Web of References</li>
+				<li>Function statements vs function expressions vs constructor functions</li>
+				<li>more to come, tell me what you want in this course!</li>
+			</ul>
 		</div><div class="grid_6 product-box">
-			<img src="images/product-2.png" title="">
+			<img src="images/product-3.png" title="">
 		</div>
 	</div>
 </div>
@@ -199,9 +213,9 @@
 		</div>
 		<div class="grid_5 footer-col">
 			<h4>About Creationix</h4>
-			<p>Hi, my real name is Tim Caswell.  I've been programming for almost 25 years.  I have a passion for creating new things and helping others ignite their own passion.</p>
-			<p>The word “creationix” is a contraction of “creation” and “ix” from linux and unix.  Creationix is all about making things using open source modular software.</p>
-			<p>This school is my way to share my experience with the world.  Thank you for your support, I will do my best to make programming a joy for you too.</p>
+			<p>Hi, my real name is Tim Caswell.  I live in rural texas with my wife and 3 children.  I've been programming for almost 25 years.  I have a passion for creating new things and helping others ignite their own passion.</p>
+			<p>The word “creationix” is a contraction of “creation” and “ix” from linux and unix.  Creationix is all about <strong>making</strong> things using open source modular software.</p>
+			<p>This school is my way to share this experience with the world.  Thank you for your support, I will do my best to make programming a joy for you too.</p>
 		</div>
 	</div>
 </div>
