Clean up text and images

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 <!-- SLIDER -->
 <div class="typo-slider" style="display:none">
-	<div class="slide slide1"><img src="images/slide1-2.jpg" title="Creativity + Engineering + Software|Creationix"></div>
-	<div class="slide slide3"><img src="images/slide2-3.jpg" title="Exploring the Frontiers of Development|Innovations"></div>
-	<div class="slide slide2"><img src="images/slide4-2.jpg" title="Teaching the Next Generation|Inventors"></div>
+	<div class="slide slide3"><img src="images/slide2-hex.jpg" title="Exploring the Frontiers of Development|Innovations"></div>
+	<div class="slide slide2"><img src="images/slide4-hex.jpg" title="Teaching the Next Generation|Inventors"></div>
+	<div class="slide slide1"><img src="images/slide1-hex.jpg" title="Creativity + Engineering + Software|Creationix"></div>
 </div>
 <!-- /SLIDER -->
 
@@ -161,7 +161,7 @@
 				<ul class="table-1">
 					<li>Unlimited Access to Premium Content</li>
 				</ul>
-				<div class="action-button"><a href="javascript:void(0)" onClick="alert('Sorry the site is almost live, come back tomorrow')">Subscribe now</a></div>
+				<div class="action-button"><a href="javascript:void(0)" onClick="alert('Sorry there is no released content yet.')">Coming soon</a></div>
 			</div>
 			<div class="table grid_4">
 				<h4 class="table-3">ultimate</h4>
@@ -202,13 +202,14 @@
 			<p><a href="mailto:tim@creationix.com">tim@creationix.com</a></p>
 		</div>
 		<div class="grid_4 footer-col">
-			<h4>You need to check it</h4>
+			<h4>Tedit Versions</h4>
+			<p>These are implementations of the developer workflow for whatever platform you happen to be on.</p>
 			<ul>
-				<li><span class="icon-bubbles"></span><a href="#" target="_blank">Lorem ipsum dolor sit amet, consectetur</a></li>
-				<li><span class="icon-warning"></span><a href="#" target="_blank">Mauris vehicula augue vitae turpis accumsan</a></li>
-				<li><span class="icon-thumbs-up"></span><a href="#" target="_blank">Vivamus vel ligula enim. Donec posuere consectetur facilisis porttitor placerat nisi</a></li>
-				<li><span class="icon-cart-3"></span><a href="#" target="_blank">Sed sollicitudin mollis arcu, eu ullamcorper</a></li>
-				<li><span class="icon-users"></span><a href="#" target="_blank">Donec gravida adipiscing lacus at varius</a></li>
+				<li><span class="icon-html5"></span><a href="https://tedit.creationix.com" target="_blank">On the Web</a></li>
+				<li><span class="icon-chrome"></span><a href="https://chrome.google.com/webstore/detail/tedit-development-environ/ooekdijbnbbjdfjocaiflnjgoohnblgf" target="_blank">In Chrome App Store</a></li>
+				<li><span class="icon-firefox"></span><a href="javascript:(alert('Still in development'))" target="_blank">In Mozilla Marketplace</a></li>
+				<li><span class="icon-IE"></span><a href="javascript:(alert('Still in development'))" target="_blank">For Windows RT</a></li>
+				<li><span class="icon-laptop"></span><a href="javascript:(alert('Still in development'))" target="_blank">Native version for laptop/desktop</a></li>
 			</ul>
 		</div>
 		<div class="grid_5 footer-col">
