--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="menu-button icon-menu-2 show-phone"></div>
 				<ul class="menu-links">
 					<li><a href="javascript:void(0)" onClick="goToByScroll('courses')">Courses</a></li>
-					<li><a href="javascript:void(0)" onClick="goToByScroll('pricing')">Pricing</a></li>
+					<li><a href="javascript:void(0)" onClick="goToByScroll('plans')">Plans</a></li>
 				</ul>
 			</div>
 			<div class="menu-right">
@@ -146,8 +146,8 @@
 <!-- /PRODUCT BOX #3 -->
 
 <!-- PRICE TABLE -->
-<div class="price_table-bg" id="pricing">
-	<h3>Price tables</h3>
+<div class="price_table-bg" id="plans">
+	<h3>Subscription Plans</h3>
 	<div class="row price_table">
 		<div class="grid_8 offset_2">
 			<p>As a subscribing member of the school, you'll have full access to all content.  Also depending on the level of extra support you give me, I'll help you share your creations with the world.  This special hosting service can run tedit build rules on-the fly and makes for a super simple deployment system for publishing small sites.</p>
