--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 <!-- SLIDER -->
 <div class="typo-slider" style="display:none">
-	<div class="slide slide3"><img src="images/slide2-hex.jpg" title="Exploring the Frontiers of Development|Innovations"></div>
-	<div class="slide slide2"><img src="images/slide4-hex.jpg" title="Teaching the Next Generation|Inventors"></div>
-	<div class="slide slide1"><img src="images/slide1-hex.jpg" title="Creativity + Engineering + Software|Creationix"></div>
+	<div class="slide slide3"><img src="images/slide2-hex.jpg" title="Explore the Frontiers of Development|"></div>
+	<div class="slide slide2"><img src="images/slide4-hex.jpg" title="Teach the Next Generation|"></div>
+	<div class="slide slide1"><img src="images/slide1-hex.jpg" title="Creativity + Engineering + Software|"></div>
 </div>
 <!-- /SLIDER -->
 
