--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div class="typo-slider" style="display:none">
 	<div class="slide slide3"><img src="images/slide2-hex.jpg" title="Explore the Frontiers of Development|"></div>
 	<div class="slide slide2"><img src="images/slide4-hex.jpg" title="Teach the Next Generation|"></div>
-	<div class="slide slide1"><img src="images/slide1-hex.jpg" title="Creativity + Engineering + Software|"></div>
+	<div class="slide slide1"><img src="images/slide1-hex.jpg" title="Creativity + Engineering + Software|That is Creationix"></div>
 </div>
 <!-- /SLIDER -->
 
@@ -200,6 +200,7 @@
 			<p>306 Lewis Akin Road<br>Red Lick, TX 75503</p>
 			<p>214-250-6642</p>
 			<p><a href="mailto:tim@creationix.com">tim@creationix.com</a></p>
+			<p><span class="icon-twitter"></span><a href="https://twitter.com/creationix" target="_blank">@creationix</a></p>
 		</div>
 		<div class="grid_4 footer-col">
 			<h4>Tedit Versions</h4>
