Add note about form not being real.

--- a/subscribe.html
+++ b/subscribe.html
@@ -17,7 +17,9 @@
 <body>
 
 <div class="price_table-bg" id="plans">
+  <h3>TEST FORM</h3>
   <div class="row price_table">
+    <p>This is not a live form, please wait while I implement the real backend</p>
     <div class="row">
       <div class="table grid_4" id="plan-basic">
         <h4 class="table-1">basic</h4>
