--- a/subscribe.html
+++ b/subscribe.html
@@ -102,16 +102,32 @@
           <input type="text" size="4" data-stripe="cvc" id="cvc-field" required>
         </fieldset>
         <fieldset>
-          <label for="month-field">Month (MM)</label>
-          <input type="text" size="2" data-stripe="month" id="month-field" required>
+          <label for="month-field">Expiration Month</label>
+          <span class="select">
+            <select id="month-field" data-stripe="month">
+              <option>Choose a Month</option>
+              <option value="01">1 - January</option>
+              <option value="02">2 - February</option>
+              <option value="03">3 - March</option>
+              <option value="04">4 - April</option>
+              <option value="05">5 - May</option>
+              <option value="06">6 - June</option>
+              <option value="07">7 - July</option>
+              <option value="08">8 - August</option>
+              <option value="09">9 - September</option>
+              <option value="10">10 - October</option>
+              <option value="11">11 - November</option>
+              <option value="12">12 - December</option>
+            </select>
+          </span>
         </fieldset>
         <fieldset>
-          <label for="month-field">Year (YYYY)</label>
-          <input type="text" size="4" data-stripe="year" id="year-field" required>
+          <label for="year-field">Year</label>
+          <input type="year" size="4" placeholder="YYYY" data-stripe="year" id="year-field" required>
         </fieldset>
         <fieldset>
-          <input name="submit" id="submitbtn" value="Submit Payment" class="first" type="submit">
-          <input name="reset" id="submitbtn" value="Reset" type="reset">
+          <input name="submit" id="submitbtn" value="Subscribe" class="first" type="submit">
+          <input name="reset" id="resetbtn" value="Reset" type="reset">
         </fieldset>
       </article>
     </form>
