--- a/subscribe.html
+++ b/subscribe.html
@@ -25,23 +25,11 @@
         <h4 class="table-1">basic</h4>
         <div class="price"><sup>$</sup>9</div>
         <div class="option">per month</div>
-        <p>As a basic member you will get full access to all past, current, and future premium content.  The more people that sign up, the more time I'll have to make new content. Tell your friends!</p>
+        <p>As a basic member you will get full access to all content.  As there is none yet, you're supporting the idea. The more people that sign up, the more time I'll have to make new content. Tell your friends!</p>
         <ul class="table-1">
           <li>Unlimited Access to Premium Content</li>
         </ul>
         <div class="action-button"><a href="#basic">Select</a></div>
-      </div>
-      <div class="table grid_4" id="plan-ultimate">
-        <h4 class="table-3">ultimate</h4>
-        <div class="price"><sup>$</sup>29</div>
-        <div class="option">per month</div>
-        <p>As an ultimate member you are serious about learning.  You get all content and up to five live sites.</p>
-        <ul class="table-3">
-          <li>Unlimited Access to Premium Content</li>
-          <li>Five Hosted Tedit Platform Sites</li>
-          <li>Limited Email Support</li>
-        </ul>
-        <div class="action-button"><a href="#ultimate">Select</a></div>
       </div>
       <div class="table grid_4" id="plan-advanced">
         <h4 class="table-2">advanced</h4>
@@ -55,6 +43,18 @@
         </ul>
         <div class="action-button"><a href="#advanced">Select</a></div>
       </div>
+      <div class="table grid_4" id="plan-ultimate">
+        <h4 class="table-3">ultimate</h4>
+        <div class="price"><sup>$</sup>29</div>
+        <div class="option">per month</div>
+        <p>As an ultimate member you are serious about learning.  You get all content and up to five live sites.</p>
+        <ul class="table-3">
+          <li>Unlimited Access to Premium Content</li>
+          <li>Five Hosted Tedit Platform Sites</li>
+          <li>Limited Email Support</li>
+        </ul>
+        <div class="action-button"><a href="#ultimate">Select</a></div>
+      </div>
     </div>
   </div>
 
@@ -66,7 +66,7 @@
           <input type="text" required name="name" id="name-field">
         </fieldset>
         <fieldset>
-          <label for="email-field">Email for Account</label>
+          <label for="email-field">Email</label>
           <input type="email" required name="email" id="email-field">
         </fieldset>
         <fieldset>
